--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "chart.js": "^4.5.1",
     "firebase": "^11.1.0",
     "next": "15.1.6",
+    "papaparse": "^5.5.3",
     "react": "^19.0.0",
     "react-calendar": "^6.0.0",
     "react-chartjs-2": "^5.3.1",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^22.10.6",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.2",
     "autoprefixer": "^10.4.20",
