--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react-calendar": "^3.9.0",
     "chart.js": "^4.5.1",
     "firebase": "^11.1.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "next": "15.1.6",
     "papaparse": "^5.5.3",
     "react": "^19.0.0",
