--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^8.3.0",
     "@types/react-calendar": "^3.9.0",
     "chart.js": "^4.5.1",
     "firebase": "^11.1.0",
@@ -20,6 +21,7 @@
     "react-calendar": "^6.0.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.0.0",
+    "stripe": "^19.3.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
