--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jspdf": "^2.5.1",
     "next": "15.1.6",
     "papaparse": "^5.5.3",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-calendar": "^6.0.0",
     "react-chartjs-2": "^5.3.1",
