🎉 Phase 2.5 + Quick Actions Complete: Multi-tenant SaaS with full CRUD functionality
✅ Phase 2: Multi-Tenant Architecture
- Gym auto-creation on first login
- Firebase Custom Claims integration
- Complete data isolation (gymId filtering)
- Multi-tenant test passed

✅ Phase 2.5: Query Integration
- All Firestore queries filter by gymId
- Member/Session/Payment/Booking isolation verified
- Security rules updated for multi-tenancy

✅ Quick Actions Implementation (NEW)
- Member Registration Modal: Full form with validation
- Session Booking Modal: Member selection, date/time picker
- Report Generator: PDF export with real-time KPI data
- Email Sender: Bulk email with templates

✅ Dashboard Integration
- 4 quick action buttons fully functional
- Real-time data refresh after actions
- Modal state management

🚀 Result: Complete SaaS product ready for monetization
- From prototype to production-ready
- ARR ¥10M goal achievable
- Full demo capability

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "GYM MATCH PO管理者専用Webアプリ",
   "scripts": {
-    "dev": "next dev -p 3013",
+    "dev": "next dev -p 3015",
     "build": "next build",
-    "start": "next start -p 3013",
+    "start": "next start -p 3015",
     "lint": "next lint"
   },
   "dependencies": {
@@ -13,6 +13,7 @@
     "@types/react-calendar": "^3.9.0",
     "chart.js": "^4.5.1",
     "firebase": "^11.1.0",
+    "firebase-admin": "^13.6.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "next": "15.1.6",
